# pc-mcmc-cigp

./: .env.local.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_skills/reaction-kinetics-agent/: SKILL.md
config/: agent_runtime.example.json
data/: README.md  fig4_cigp.csv  fig4_standard_bo.csv
docs/: AGENT_BACKEND_ZH.md  API_ZH.md  PAPER_JOURNAL_STRATEGY_ZH.md  PPT_SOURCE_NOTES_ZH.md  USAGE_ZH.md
evals/: agent_prompt_cases.json
examples/: agent_backend_workflow.py  discover_hbr_mechanism.py  kinetic_template_gallery.py  optimize_epoxidation_cigp.py
examples/baselines/: sindy_hbr.py
experiments/: __init__.py  fig3_hbr_discovery.py  fig4_acquisition_comparison.py  fig4_epoxidation_bo.py
legacy/: README.md  SINDy_test.py  _kinetics_adapter.py  acquisition_functions.py  autocatalytic_reaction.py  base_physics.py  benchmark_env.py  benchmark_prediction_robertson.py  cigp_model.py  cigp_model_normalized.py  config.py  config_benchmark.py  config_discovery.py  config_robertson.py  epoxy_reaction.py  fig4.py  mechanism_engine.py  mechanism_inference.py  optimization_task.py  parallel_reaction.py  plotting_utils.py  reaction_network_generator.py  reversible_reaction.py  robertson_generalized.py  run_aryl_case.py  run_benchmark_final_vis.py  run_benchmark_loop.py  run_discovery.py  run_sr_benchmark.py  run_standard_bo_benchmark.py  run_training_example.py  series_reaction.py  simple_reaction.py  simulation_utils.py  test_acquisition.py  visualize_reaction_space_3d.py  文章测试.txt
pc_mcmc_cigp/: __init__.py
pc_mcmc_cigp/acquisition/: __init__.py  functions.py
scripts/: __init__.py  configure_llm.py  evaluate_agent_prompts.py  extract_ppt_optimization_logs.py  inspect_ppt_source.py  plot_fig3.py  plot_fig4.py  probe_llm_api.py  run_agent_web.py  run_smoke_tests.py
tests/: test_acquisition_comparison_experiment.py  test_agent_chat.py  test_agent_cigp_frontend.py  test_agent_experiments.py  test_agent_http_api.py  test_agent_mechanism_service.py  test_agent_project_state.py  test_agent_skills_mapping_and_compilation.py  test_agent_workflow.py  test_benchmarks.py  test_cigp_and_acquisition.py  test_experiments.py  test_kinetics_templates.py  test_llm_client.py  test_llm_probe.py  test_mcmc_diagnostics.py  test_plotting_scripts.py  test_ppt_data_extraction.py  test_rate_laws_and_pathways.py  test_reactions_and_discovery.py
web/: app.js  index.html  styles.css
(+57 files in other folders)
