[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-mcmc-cigp"
version = "0.1.0"
description = "Physically constrained MCMC and Chemical-Informed Gaussian Processes for reaction network discovery."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-NC-4.0"}
authors = [
  {name = "PC-MCMC-CIGP contributors"}
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.6",
  "tqdm>=4.65"
]
keywords = ["reaction-network", "bayesian-inference", "gaussian-process", "active-learning", "chemical-kinetics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Free for non-commercial use",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry"
]

[project.optional-dependencies]
cigp = ["GPy>=1.13"]
benchmarks = ["pysindy>=1.7", "seaborn>=0.13", "scipy>=1.10"]
dev = ["pytest>=8", "ruff>=0.5"]
agent = ["openai-agents"]
web = ["fastapi", "uvicorn"]

[tool.setuptools.packages.find]
include = ["pc_mcmc_cigp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"
